fix: adjusting to accommodate light and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -3,78 +3,44 @@
 @tailwind utilities;
 
 main {
-  @apply mx-auto max-w-screen-xl px-5 font-sans xs:text-[16px] md:text-[18px]
+  @apply mx-auto max-w-screen-xl px-8 pb-4 font-sans xs:text-[16px] md:text-[18px];
 }
 
-/* body {
-  @apply mx-auto max-w-screen-xl px-5 font-sans xs:text-[16px] md:text-[18px]
-} */
+:root {
+  --color-text: #213547;
+  --color-link: #213547;
+  --color-background: #ffffff;
+  --color-heading: #213547;
+}
 
-/* :root {
+body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
+  color: var(--color-text);
+  background-color: var(--color-background);
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
 }
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: var(--color-link);
   text-decoration: inherit;
 }
-a:hover {
-  color: #535bf2;
+
+/* Dark mode styles */
+.dark {
+  --color-text: rgba(255, 255, 255, 0.87);
+  --color-link: rgba(255, 255, 255, 0.87);
+  --color-background: #242424;
+  --color-heading: rgba(255, 255, 255, 0.87);
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+body.dark {
+  color: var(--color-text);
+  background-color: var(--color-background);
 }
-
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
-} */
